# cryptocorrosion

./: .travis.yml  Cargo.lock.msrv  Cargo.toml  README.md  test_alt_simd.sh  test_stable.sh  unreleased-changes.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: check-clippy.yaml  check-rustfmt.yaml  tests.yaml
block-ciphers/threefish/: CHANGELOG.md  Cargo.toml  LICENSE-MIT
block-ciphers/threefish/benches/: lib.rs
block-ciphers/threefish/src/: consts.rs  lib.rs
ci/: script.sh
hashes/blake/: CHANGELOG.md  Cargo.toml
hashes/blake/benches/: blake256.rs  blake512.rs  machine.rs
hashes/blake/src/: consts.rs  lib.rs
hashes/blake/tests/: lib.rs
hashes/groestl/: Cargo.toml  build.rs
hashes/groestl/benches/: groestl256.rs  groestl512.rs
hashes/groestl/src/: compressor.rs  hash.c  lib.rs  sse2.rs
hashes/groestl/tests/: lib.rs
hashes/jh/: Cargo.toml
hashes/jh/benches/: machine.rs
hashes/jh/src/: compressor.rs  lib.rs
hashes/skein/: Cargo.toml
hashes/skein/benches/: skein1024.rs  skein256.rs  skein512.rs
hashes/skein/src/: lib.rs
hashes/skein/tests/: lib.rs
stream-ciphers/chacha/: Cargo.toml  README.md
stream-ciphers/chacha/benches/: chacha20.rs
stream-ciphers/chacha/src/: crypto.rs  guts.rs  lib.rs  rand_impl.rs  rustcrypto_impl.rs
utils-simd/crypto-simd/: Cargo.toml  README.md
utils-simd/crypto-simd/src/: Cargo.toml  lib.rs  packed_simd.rs
utils-simd/ppv-lite86/: CHANGELOG.md  Cargo.toml
utils-simd/ppv-lite86/src/: generic.rs  lib.rs  soft.rs  sse2.rs  types.rs
utils-simd/ppv-lite86/src/x86_64/: avx.rs  mod.rs  sse2.rs
utils-simd/ppv-null/: Cargo.toml
utils-simd/ppv-null/src/: lib.rs
