[package]
name = "threefish-cipher"
version = "0.3.1"
authors = ["The Rust-Crypto Project Developers", "The Cryptocorrosion Contributors"]
license = "MIT/Apache-2.0"
description = "Threefish block cipher"
documentation = "https://docs.rs/threefish"
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
keywords = ["crypto", "threefish", "gost", "block-cipher"]

[dependencies]
generic-array = "0.12"
byteorder = { version = "1", default-features = false }
block-cipher-trait = "0.6"

[dev-dependencies]
hex-literal = "0.2"

[features]
no_unroll = []
