[package]
name = "blake-hash"
version = "0.4.1"
authors = ["The CryptoCorrosion Contributors"]
license = "MIT/Apache-2.0"
description = "BLAKE hash functions"
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
keywords = ["crypto", "blake", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
block-buffer = "0.9"
digest = "0.9"
simd = { package = "ppv-lite86", version = "0.2.16", optional = true }

[features]
default = ["simd", "std"]
std = []

[dev-dependencies]
digest = { version = "0.9", features = ["dev"] }

[badges]
travis-ci = { repository = "cryptocorrosion/cryptocorrosion" }
