[package]
name = "groestl-aesni"
version = "0.1.2"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Hardware-accelerated Groestl hash for x86-64 systems with AES extensions"
documentation = "https://docs.rs/groestl-aesni"
keywords = ["crypto", "groestl", "hash", "digest"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/kazcw/groestl-aesni"

[dependencies]
block-buffer = "0.3.3"
byte-tools = "0.2.0"
digest = { version = "^0.7.1", features = ["dev"] }

[build-dependencies]
cc = "1.0.0"

[badges]
travis-ci = { repository = "kazcw/groestl-aesni" }
