[package]
name = "groestl-aesni"
version = "0.2.0"
authors = ["Kaz Wesley <keziahw@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Hardware-accelerated Groestl hash for x86-64 systems with AES extensions"
documentation = "https://docs.rs/groestl-aesni"
keywords = ["crypto", "groestl", "hash", "digest"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/kazcw/groestl-aesni"
edition = "2018"

[dependencies]
block-buffer = "0.7"
digest = "0.8"

[build-dependencies]
cc = "1.0.0"

[badges]
travis-ci = { repository = "kazcw/groestl-aesni" }
