[package]
name = "jh-x86_64"
version = "0.2.2"
authors = ["The CryptoCorrosion Contributors"]
license = "MIT/Apache-2.0"
description = "Portable JH with optimizations for x86-64 cpus"
documentation = "https://docs.rs/jh-x86_64"
keywords = ["crypto", "jh", "hash", "digest"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
edition = "2018"

[dependencies]
block-buffer = "0.7"
digest = "0.8"
hex-literal = "0.2"
simd = { package = "ppv-lite86", version = "0.2.6" }

[dev-dependencies]
digest = { version = "0.8", features = ["dev"] }

[build-dependencies]
cc = "1.0.3"

[features]
default = ["std"]
std = []

[badges]
travis-ci = { repository = "cryptocorrosion/cryptocorrosion" }
