[package]
name = "skein-hash"
version = "0.3.0"
authors = ["The CryptoCorrosion Contributors"]
license = "MIT/Apache-2.0"
description = "Skein hash functions"
repository = "https://github.com/cryptocorrosion/hashes"
keywords = ["crypto", "skein", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
block-buffer = "0.7"
block-padding = "0.1.0"
digest = "0.8"
threefish-cipher = "0.3"

[dev-dependencies]
digest = { version = "0.8", features = ["dev"] }
