[package]
name = "crypto-simd"
version = "0.2.0"
authors = ["The CryptoCorrosion Contributors"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Crypto-oriented SIMD wrapper abstracting over multiple backends"
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
keywords = ["crypto", "simd"]
categories = ["cryptography", "no-std"]

[dependencies]
packed_simd_crate = { package = "packed_simd", version = "0.3", optional = true }

[features]
default = ["simd", "std"]
simd = []
std = []
packed_simd = ["packed_simd_crate"]

[badges]
travis-ci = { repository = "cryptocorrosion/cryptocorrosion" }
