[package]
name = "ppv-lite86"
version = "0.1.1"
authors = ["The CryptoCorrosion Contributors"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of the crypto-simd API for x86"
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
keywords = ["crypto", "simd", "x86"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-simd = "0.1"

[badges]
travis-ci = { repository = "cryptocorrosion/cryptocorrosion" }
