[package]
name = "ppv-lite86"
version = "0.3.0"
authors = ["The CryptoCorrosion Contributors"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Implementation of the crypto-simd API for x86"
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
keywords = ["crypto", "simd", "x86"]
categories = ["cryptography", "no-std"]

[dependencies]
zeroize = { version = "1.6.0", optional = true }

[badges]
travis-ci = { repository = "cryptocorrosion/cryptocorrosion" }

[features]
default = ["std"]
std = []
simd = [] # deprecated
no_simd = []
zeroize_support = ["zeroize"]