[package]
name = "blake-hash"
version = "0.3.0"
authors = ["The CryptoCorrosion Contributors"]
license = "MIT/Apache-2.0"
description = "BLAKE hash functions"
repository = "https://github.com/cryptocorrosion/cryptocorrosion"
keywords = ["crypto", "blake", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
block-buffer = "0.7"
crypto-simd = "0.1"
digest = "0.8"

[features]
default = ["simd", "std"]
packed_simd = ["crypto-simd/packed_simd"]
simd = ["crypto-simd/simd"]
std = ["crypto-simd/std"]

[dev-dependencies]
digest = { version = "0.8", features = ["dev"] }
